test/org/midica/testfiles/failing/macro-redefined.midica
INCLUDE_FILE inc/instruments.midica

MACRO test
	0 c /4
	0 c /4
END

MACRO test
	0 c /4
END
